--- a/athena.css
+++ b/athena.css
@@ -2,3 +2,14 @@ Editor > GtkToolbar {
   padding: 2px;
 }
 
+GtkComboBox > .button {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right: 0;
+}
+
+#btn-close-current-file {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
