adds rendering indicator & toolbar to PDF preview

--- a/athena.css
+++ b/athena.css
@@ -1,5 +1,11 @@
+PopplerPreview > GtkToolbar,
 Editor > GtkToolbar {
   padding: 2px;
+}
+
+PopplerPreview > GtkToolbar {
+  padding-bottom: 3px;
+  padding-right: 5px;
 }
 
 #files-view > .button,
